objects/Assigned_Task_Contribution__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Task_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Trail/Step</label>
        <referenceTo>Assigned_Task__c</referenceTo>
        <relationshipLabel>Assigned Trail/Step Contributions</relationshipLabel>
        <relationshipName>Assigned_Task_Program_Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contributed_Value__c</fullName>
        <label>Contributed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Assigned Trail/Step Contribution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATC-{0000}</displayFormat>
        <label>Contribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Trail/Step Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>